--- a/menus/bastille.html
+++ b/menus/bastille.html
@@ -54,7 +54,7 @@
                         <div class="side">With orange zest</div>
                     </div>
                     <div class="cost">25 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -63,7 +63,7 @@
                         <div class="side">Carrots, parsnips, Jerusalem artichoke</div>
                     </div>
                     <div class="cost">35 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -72,7 +72,7 @@
                         <div class="side">Revisited</div>
                     </div>
                     <div class="cost">20 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
             </div>
 
@@ -85,7 +85,7 @@
                         <div class="side">With mashed parsnip</div>
                     </div>
                     <div class="cost">40 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -94,7 +94,7 @@
                         <div class="side">With mashed potatoes</div>
                     </div>
                     <div class="cost">35 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -103,7 +103,7 @@
                         <div class="side">With vegetable gnocchis</div>
                     </div>
                     <div class="cost">44 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
             </div>
         
@@ -116,7 +116,7 @@
                         <div class="side">With hazelnut butter</div>
                     </div>
                     <div class="cost">18 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -125,7 +125,7 @@
                         <div class="side">Revisited</div>
                     </div>
                     <div class="cost">22 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -134,7 +134,7 @@
                         <div class="side">With blueberries and marzipan</div>
                     </div>                    
                     <div class="cost">23 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
             </div>
             
