--- a/menus/le_gourmand.html
+++ b/menus/le_gourmand.html
@@ -53,7 +53,7 @@
                         <div class="side">Seasoned with yuzu</div>
                     </div>
                     <div class="cost">25 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -62,7 +62,7 @@
                         <div class="side">With seasonal vegetables</div>
                     </div>
                     <div class="cost">35 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -71,7 +71,7 @@
                         <div class="side">with truffles</div>
                     </div>
                     <div class="cost">20 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
             </div>
 
@@ -84,7 +84,7 @@
                         <div class="side">With truffle cream</div>
                     </div>
                     <div class="cost">40 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -93,7 +93,7 @@
                         <div class="side">With seasonal vegetables</div>
                     </div>
                     <div class="cost">35 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -102,7 +102,7 @@
                         <div class="side">With mashed parshnips</div>
                     </div>
                     <div class="cost">44 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
             </div>
         
@@ -115,7 +115,7 @@
                         <div class="side">Chef's choice</div>
                     </div>
                     <div class="cost">18 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -124,7 +124,7 @@
                         <div class="side">Revisited</div>
                     </div>
                     <div class="cost">22 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -133,7 +133,7 @@
                         <div class="side">With hazelnuts</div>
                     </div>
                     <div class="cost">23 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
             </div>
             <div class="button-container">
