--- a/menus/the_enchanted_plate.html
+++ b/menus/the_enchanted_plate.html
@@ -53,7 +53,7 @@
                         <div class="side">With truffle cream</div>
                     </div>
                     <div class="cost">25 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -62,7 +62,7 @@
                         <div class="side">With buckwheat blinis</div>
                     </div>
                     <div class="cost">35 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -71,7 +71,7 @@
                         <div class="side">Marinated with orange zest</div>
                     </div>
                     <div class="cost">20 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -80,7 +80,7 @@
                         <div class="side">With fig jam and grilled baguette</div>
                     </div>
                     <div class="cost">35 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
             </div>
 
@@ -93,7 +93,7 @@
                         <div class="side">With white celery puree</div>
                     </div>
                     <div class="cost">40 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -102,7 +102,7 @@
                         <div class="side">With mashed sweet potatoes</div>
                     </div>
                     <div class="cost">35 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -111,7 +111,7 @@
                         <div class="side">With wild rice and lemon zest</div>
                     </div>
                     <div class="cost">44 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
             </div>
         
@@ -124,7 +124,7 @@
                         <div class="side">With caramel butter ice cream</div>
                     </div>
                     <div class="cost">18 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -133,7 +133,7 @@
                         <div class="side">With lemon drizzle</div>
                     </div>
                     <div class="cost">22 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
                 <div class="dish">
@@ -142,7 +142,7 @@
                         <div class="side">Destructured</div>
                     </div>
                     <div class="cost">23 <i class="fa-sharp fa-solid fa-euro-sign"></i></div>
-                    <div class="check-mark"><i class="fa-solid fa-circle-check fa-xl"></i></div>
+                    <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
             </div>
             <div class="button-container">
