class names modifications

--- a/menus/le_gourmand.html
+++ b/menus/le_gourmand.html
@@ -39,16 +39,16 @@
 
 
         <main class="menu">
-            <div class="restaurant-logo">
+            <div class="menu__restaurant-logo">
                 <h1>Le Gourmand</h1>
                 <i class="fa-regular fa-heart fa-xl"></i>
             </div>
             
-            <div class="dishes" id="entrees">
+            <div class="menu__dishes" id="entrees">
                 <div class="category">ENTREES</div>
                 <div class="partial-underline"></div>
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Tuna Carpaccio</div>
                         <div class="side">Seasoned with yuzu</div>
                     </div>
@@ -56,8 +56,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Crunchy Lobster Croquets</div>
                         <div class="side">With seasonal vegetables</div>
                     </div>
@@ -65,8 +65,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Mushroom soup</div>
                         <div class="side">with truffles</div>
                     </div>
@@ -75,11 +75,11 @@
                 </div>
             </div>
 
-            <div class="dishes" id="main_dish">
+            <div class="menu__dishes" id="main_dish">
                 <div class="category">MAIN DISH</div>
                 <div class="partial-underline"></div>
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Roast Chicken with Provincial Herbs</div>
                         <div class="side">With truffle cream</div>
                     </div>
@@ -87,8 +87,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Roasted Lobster</div>
                         <div class="side">With seasonal vegetables</div>
                     </div>
@@ -96,8 +96,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Angust Beef Ribs</div>
                         <div class="side">With mashed parshnips</div>
                     </div>
@@ -106,11 +106,11 @@
                 </div>
             </div>
         
-            <div class="dishes" id="desserts">
+            <div class="menu__dishes" id="desserts">
                 <div class="category">DESSERTS</div>
                 <div class="partial-underline"></div>
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Assorted Dessert Plate</div>
                         <div class="side">Chef's choice</div>
                     </div>
@@ -118,8 +118,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Cr&egrave;me brul&eacute;e</div>
                         <div class="side">Revisited</div>
                     </div>
@@ -127,8 +127,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Tiramisu</div>
                         <div class="side">With hazelnuts</div>
                     </div>
