--- a/menus/the_enchanted_plate.html
+++ b/menus/the_enchanted_plate.html
@@ -39,16 +39,16 @@
 
 
         <main class="menu">
-            <div class="restaurant-logo">
+            <div class="menu__restaurant-logo">
                 <h1>The Enchanted <br>Plate</h1>
                 <i class="fa-regular fa-heart fa-xl"></i>
             </div>
             
-            <div class="dishes" id="entrees">
+            <div class="menu__dishes" id="entrees">
                 <div class="category">ENTREES</div>
                 <div class="partial-underline"></div>
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Foie Gras Ravioli</div>
                         <div class="side">With truffle cream</div>
                     </div>
@@ -56,8 +56,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Oscietra Caviar</div>
                         <div class="side">With buckwheat blinis</div>
                     </div>
@@ -65,8 +65,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Lobster and Leek Foam</div>
                         <div class="side">Marinated with orange zest</div>
                     </div>
@@ -74,8 +74,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Duck Foie Gras</div>
                         <div class="side">With fig jam and grilled baguette</div>
                     </div>
@@ -84,11 +84,11 @@
                 </div>
             </div>
 
-            <div class="dishes" id="main_dish">
+            <div class="menu__dishes" id="main_dish">
                 <div class="category">MAIN DISH</div>
                 <div class="partial-underline"></div>
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Fresh Buttered Scallops</div>
                         <div class="side">With white celery puree</div>
                     </div>
@@ -96,8 +96,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Pan-Fried Lobster</div>
                         <div class="side">With mashed sweet potatoes</div>
                     </div>
@@ -105,8 +105,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Braised Ox Tail</div>
                         <div class="side">With wild rice and lemon zest</div>
                     </div>
@@ -115,11 +115,11 @@
                 </div>
             </div>
         
-            <div class="dishes" id="desserts">
+            <div class="menu__dishes" id="desserts">
                 <div class="category">DESSERTS</div>
                 <div class="partial-underline"></div>
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Chocolate and Hazelnut Macaroon</div>
                         <div class="side">With caramel butter ice cream</div>
                     </div>
@@ -127,8 +127,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Baba au rhum</div>
                         <div class="side">With lemon drizzle</div>
                     </div>
@@ -136,8 +136,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Lemon Meringue Pie</div>
                         <div class="side">Destructured</div>
                     </div>
