--- a/menus/the_full_palette.html
+++ b/menus/the_full_palette.html
@@ -39,16 +39,16 @@
 
 
         <main class="menu">
-            <div class="restaurant-logo">
+            <div class="menu__restaurant-logo">
                 <h1>The Full Palette</h1>
                 <i class="fa-regular fa-heart fa-xl"></i>
             </div>
 
-            <div class="dishes" id="entrees">
+            <div class="menu__dishes" id="entrees">
                 <div class="category">ENTREES</div>
                 <div class="partial-underline"></div>
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Escargot</div>
                         <div class="side">With Southern French Spices</div>
                     </div>
@@ -56,8 +56,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Duck Foie Gras</div>
                         <div class="side">With black truffle Shavings</div>
                     </div>
@@ -65,8 +65,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Fried egg</div>
                         <div class="side">Seasoned with truffle cream and...</div>
                     </div>
@@ -75,11 +75,11 @@
                 </div>
             </div>
 
-            <div class="dishes" id="main_dish">
+            <div class="menu__dishes" id="main_dish">
                 <div class="category">MAIN DISH</div>
                 <div class="partial-underline"></div>
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Herb-Encrusted Steak</div>
                         <div class="side">With delicately sliced and seasoned veg...</div>
                     </div>
@@ -87,8 +87,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Ox Tail Shepard's Pie</div>
                         <div class="side">With black truffle and pureed parsnips</div>
                     </div>
@@ -96,8 +96,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Filet of sole</div>
                         <div class="side">With citrus dressing</div>
                     </div>
@@ -106,11 +106,11 @@
                 </div>
             </div>
         
-            <div class="dishes" id="desserts">
+            <div class="menu__dishes" id="desserts">
                 <div class="category">DESSERTS</div>
                 <div class="partial-underline"></div>
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Paris-Brest</div>
                         <div class="side">Revisited</div>
                     </div>
@@ -118,8 +118,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Chocolate Macaroons</div>
                         <div class="side">With vanilla ice cream</div>
                     </div>
@@ -127,8 +127,8 @@
                     <div class="selected"><i class="fa-solid fa-circle-check fa-xl"></i></div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-container">
+                <div class="menu__dishes__dish">
+                    <div class="menu__dishes__dish__container">
                         <div class="main">Chocolate Mousse</div>
                         <div class="side">With spices and black truffle</div>
                     </div>
