removed forward slash from before styles.css

--- a/menus/bastille.html
+++ b/menus/bastille.html
@@ -6,7 +6,7 @@
         <title>Bastille</title>
         <meta charset="UTF-8">
         <meta name="viewport" content= "width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/styles.css" type="text/css">
+        <link rel="stylesheet" href="styles.css" type="text/css">
 
         <link href="https://fonts.cdnfonts.com/css/shrikhand" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
@@ -29,7 +29,7 @@
 
     <body>
         <header>
-            <a href="/homepage.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
+            <a href="/index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
             <img src="/images/logo/ohmyfood.png" alt="oh my food logo image" class="logo">
         </header>
 
