--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Oh My Good Food</title>
         <meta charset="UTF-8">
         <meta name="viewport" content= "width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/styles.css" type="text/css">
+        <link rel="stylesheet" href="styles.css" type="text/css">
 
         <link href="https://fonts.cdnfonts.com/css/shrikhand" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
