--- a/menus/the_enchanted_plate.html
+++ b/menus/the_enchanted_plate.html
@@ -6,7 +6,7 @@
         <title>The Enchanted Plate</title>
         <meta charset="UTF-8">
         <meta name="viewport" content= "width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/styles.css" type="text/css">
+        <link rel="stylesheet" href="styles.css" type="text/css">
 
         <link href="https://fonts.cdnfonts.com/css/shrikhand" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
