--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section class="restaurants-container">
             <h2>Restaurants</h2>
             <div class="restaurants-container__restaurants">
-                <a href="menus/the_full_palette.html">
+                <a href="the_full_palette.html">
                     <div class="restaurants-container__restaurants__restaurant">
                         <div class="restaurants-container__restaurants__restaurant__image">
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
@@ -91,7 +91,7 @@
                 </a>
                 <i class="far fa-heart fa-xl"></i>
 
-                <a href="menus/the_enchanted_plate.html">
+                <a href="the_enchanted_plate.html">
                     <div class="restaurants-container__restaurants__restaurant">
                         <div class="restaurants-container__restaurants__restaurant__image">
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate">
@@ -103,7 +103,7 @@
                 </a>
                 <i class="far fa-heart fa-xl"></i>
 
-                <a href="menus/bastille.html">
+                <a href="bastille.html">
                     <div class="restaurants-container__restaurants__restaurant">
                         <div class="restaurants-container__restaurants__restaurant__image">
                             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
@@ -114,7 +114,7 @@
                 </a>
                 <i class="far fa-heart fa-xl"></i>
 
-                <a href="menus/le_gourmand.html">
+                <a href="le_gourmand.html">
                     <div class="restaurants-container__restaurants__restaurant">
                         <div class="restaurants-container__restaurants__restaurant__image">
                             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le Gourmand">
