--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="restaurants-container__restaurants__restaurant">
                         <div class="restaurants-container__restaurants__restaurant__image">
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate">
-                            <span class="new-restaurant"> New </span>
+                            <span class="new"> New </span>
                         </div>
                         <h4>The Enchanted Plate</h4>
                         <p>New York</p>
