trying to access logos

--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -29,13 +29,13 @@
 
     <body>
         <header>
-            <a href="/index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-            <img src="/images/logo/ohmyfood.png" alt="oh my food logo image" class="logo">
+            <a href="index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
+            <img src="images/logo/ohmyfood.png" alt="oh my food logo image" class="logo">
         </header>
 
 
 
-        <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate" class="fore-image">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate" class="fore-image">
 
 
         <main class="menu">
