removing forward slash before images file in footer

--- a/bastille.html
+++ b/bastille.html
@@ -146,7 +146,7 @@
         
 
         <footer>
-            <img src="/images/logo/ohmyfood@2x.svg" alt="oh my food logo image" class="footer-logo">
+            <img src="images/logo/ohmyfood@2x.svg" alt="oh my food logo image" class="footer-logo">
             <div class="suggest-a-restaurant">
                 <i class="fa-sharp fa-solid fa-utensils"></i>
                 <span>Suggest a restaurant</span>
