--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -151,7 +151,7 @@
         </main>
 
         <footer>
-            <img src="images/logo/ohmyfood@2x.svg" alt="oh my food logo image" class="footer-logo">
+            <img src="images/logo/ohmyfood.png" alt="oh my food logo image" class="footer-logo">
             <div class="suggest-a-restaurant">
                 <i class="fa-sharp fa-solid fa-utensils"></i>
                 <span>Suggest a restaurant</span>
