--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="location">
             <i class="fa-solid fa-location-dot"></i>
-            Paris, Belleville
+            <span>Paris, Belleville</span>
         </div>
 
         <section class="booking">
