--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
     <head>
-        <title>Bastille</title>
+        <title>Le Gourmand</title>
         <meta charset="UTF-8">
         <meta name="viewport" content= "width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css" type="text/css">
@@ -12,18 +12,19 @@
         <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
                 
         <!--Import Google Fonts-->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
         <style>
-            .material-symbols-sharp {
+            .material-symbols-sharp 
+            {
               font-variation-settings:
               'FILL' 1,
               'wght' 400,
               'GRAD' 0,
               'opsz' 48
             }
-            </style>
+        </style>
     </head>
 
 
