--- a/bastille.html
+++ b/bastille.html
@@ -167,7 +167,7 @@
             </div>
 
             <div id="email">
-                <span>Email Address: <span class="email_link">ohmygoodfood@gmail.com</span></span>
+                <span>Email Address: <a href="mailto:ohmygoodfood@gmail.com">ohmygoodfood@gmail.com</a></span>
             </div>
         </footer>
 
