changed menus restaurant logos from h2 to an image

--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -41,7 +41,7 @@
 
         <main class="menu">
             <div class="menu__restaurant-logo">
-                <h1>Le Gourmand</h1>
+                <img src="images/logo/Le_Gourmand.png" alt="Le Gourmand logo">
                 <i class="fa-regular fa-heart fa-xl"></i>
             </div>
             
