--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -41,7 +41,7 @@
 
         <main class="menu">
             <div class="menu__restaurant-logo">
-                <h1>The Enchanted <br>Plate</h1>
+                <img src="images/logo/The_Enchanted_Plate.png" alt="The Enchanted Plate logo">
                 <i class="fa-regular fa-heart fa-xl"></i>
             </div>
             
