--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -41,7 +41,7 @@
 
         <main class="menu">
             <div class="menu__restaurant-logo">
-                <h1>The Full Palette</h1>
+                <img src="images/logo/The_Full_Palette.png" alt="The Full Palette logo">
                 <i class="fa-regular fa-heart fa-xl"></i>
             </div>
 
