--- a/bastille.html
+++ b/bastille.html
@@ -41,7 +41,7 @@
 
         <main class="menu">
             <div class="menu__restaurant-logo">
-                <h1>Bastille</h1>
+                <img src="images/logo/Bastille.png" alt="bastille logo">
                 <i class="fa-regular fa-heart fa-xl"></i>
             </div>
             
