image logos for restaurants removed nd changed headings for shrikhand and roboto import

--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -8,8 +8,10 @@
         <meta name="viewport" content= "width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css" type="text/css">
 
-        <link href="https://fonts.cdnfonts.com/css/shrikhand" rel="stylesheet">
-        <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
                 
         <!--Import Google Fonts-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
@@ -31,7 +33,7 @@
     <body>
         <header>
             <a href="index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-            <img src="images/logo/ohmyfood.png" alt="oh my food logo image" class="logo">
+            <img src="images/logo/ohmyfood.png" alt="ohmyfood" class="logo">
         </header>
 
 
@@ -41,7 +43,7 @@
 
         <main class="menu">
             <div class="menu__restaurant-logo">
-                <img src="images/logo/The_Enchanted_Plate.png" alt="The Enchanted Plate logo">
+                <h2>The Enchanted Plate</h2>
                 <i class="fa-regular fa-heart fa-xl"></i>
             </div>
             
@@ -152,7 +154,7 @@
         </main>
 
         <footer>
-            <img src="images/logo/ohmyfood.png" alt="oh my food logo image" class="footer-logo">
+            <img src="images/logo/ohmyfood.png" alt="ohmyfood" class="footer-logo">
             <div class="suggest-a-restaurant">
                 <i class="fa-sharp fa-solid fa-utensils"></i>
                 <span>Suggest a restaurant</span>
