--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <meta name="viewport" content= "width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css" type="text/css">
 
-        <link href="https://fonts.cdnfonts.com/css/shrikhand" rel="stylesheet">
-        <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
                 
         <!--Import Google Fonts-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
@@ -130,7 +132,7 @@
 
 
         <footer>
-            <img src="images/logo/ohmyfood.png" alt="oh my food logo image" class="footer-logo">
+            <img src="images/logo/ohmyfood.png" alt="ohmyfood" class="footer-logo">
             <div class="suggest-a-restaurant">
                 <i class="fa-sharp fa-solid fa-utensils"></i>
                 <span>Suggest a restaurant</span>
