--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
+
         <style>
             .material-symbols-sharp 
             {
@@ -83,51 +84,77 @@
         <section class="restaurants-container">
             <h2>Restaurants</h2>
             <div class="restaurants-container__restaurants">
-                <a href="the_full_palette.html">
-                    <div class="restaurants-container__restaurants__restaurant">
-                        <div class="restaurants-container__restaurants__restaurant__image">
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
-                            <span class="new"> New </span>
-                        </div>
-                        <h4>The Full Palette</h4>
-                        <p>New York</p>
+                <a href="the_full_palette.html" class="restaurants-container__restaurants__restaurant">
+                    <div class="restaurants-container__restaurants__restaurant__image">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
+                        <span class="new"> New </span>
                     </div>
-                </a>
-                <i class="far fa-heart fa-xl"></i>
+                    
+                    <div class="restaurants-container__restaurants__restaurant__bottom-container">
+                        <div class="text">
+                            <h4>The Full Palette</h4>
+                            <p>New York</p>
+                        </div>
 
-                <a href="the_enchanted_plate.html">
-                    <div class="restaurants-container__restaurants__restaurant">
-                        <div class="restaurants-container__restaurants__restaurant__image">
-                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate">
-                            <span class="new"> New </span>
+                        <div class="heart">
+                            <i class="far fa-heart fa-xl"></i>
+                            <i class="fas fa-heart fa-xl"></i>
                         </div>
-                        <h4>The Enchanted Plate</h4>
-                        <p>New York</p>
                     </div>
                 </a>
-                <i class="far fa-heart fa-xl"></i>
 
-                <a href="bastille.html">
-                    <div class="restaurants-container__restaurants__restaurant">
-                        <div class="restaurants-container__restaurants__restaurant__image">
-                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
-                        </div>
-                        <h4>Bastille</h4>
-                        <p>New York</p>
+                <a href="the_enchanted_plate.html" class="restaurants-container__restaurants__restaurant">
+                    <div class="restaurants-container__restaurants__restaurant__image">
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate">
+                        <span class="new"> New </span>
                     </div>
-                </a>
-                <i class="far fa-heart fa-xl"></i>
 
-                <a href="le_gourmand.html">
-                    <div class="restaurants-container__restaurants__restaurant">
-                        <div class="restaurants-container__restaurants__restaurant__image">
-                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le Gourmand">
+                    <div class="restaurants-container__restaurants__restaurant__bottom-container">
+                        <div class="text">
+                            <h4>The Enchanted Plate</h4>
+                            <p>New York</p>
                         </div>
-                        <h4>Le Gourmand</h4>
-                        <p>New York</p>
+
+                        <div class="heart">
+                            <i class="far fa-heart fa-xl"></i>
+                            <i class="fas fa-heart fa-xl"></i>
+                        </div>
                     </div>
                 </a>
-                <i class="far fa-heart fa-xl"></i>
+
+                <a href="bastille.html" class="restaurants-container__restaurants__restaurant">
+                    <div class="restaurants-container__restaurants__restaurant__image">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
+                    </div>
+                    <div class="restaurants-container__restaurants__restaurant__bottom-container">
+                        <div class="text">
+                            <h4>Bastille</h4>
+                            <p>New York</p>
+                        </div>
+
+                        <div class="heart">
+                            <i class="far fa-heart fa-xl"></i>
+                            <i class="fas fa-heart fa-xl"></i>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="le_gourmand.html" class="restaurants-container__restaurants__restaurant">
+                    <div class="restaurants-container__restaurants__restaurant__image">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le Gourmand">
+                    </div>
+                    <div class="restaurants-container__restaurants__restaurant__bottom-container">
+                        <div class="text">
+                            <h4>Le Gourmand</h4>
+                            <p>New York</p>
+                        </div>
+
+                        <div class="heart">
+                            <i class="far fa-heart fa-xl"></i>
+                            <i class="fas fa-heart fa-xl"></i>
+                        </div>
+                    </div>
+                </a>
             </div>
         </section>
 
