changing heart display

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content= "width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css" type="text/css">
-  
+        <link href="css/normalize.css" type="text/css" rel="stylesheet">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,29 +55,31 @@
 
         <section class="howItWorks">
             <h2>How it works</h2>
-            <div class="howItWorks__option">
-                <span class="counter-circle">
-                    <span class="material-symbols-sharp"> counter_1</span>
-                </span>
-                <span class="material-symbols-sharp"> phone_iphone </span>
-                <span>Choose a restaurant</span>
-            </div>
-            <div class="howItWorks__option">
-                <span class="counter-circle">
-                    <span class="material-symbols-sharp"> counter_2</span>
-                </span>
-                
-                <span class="material-symbols-sharp"> format_list_bulleted </span>
-                <span>Create your menu</span>
-            </div>
-            <div class="howItWorks__option">
-                <span class="counter-circle">
-                    <span class="material-symbols-sharp"> counter_3</span>
-                </span>
-                <span class="material-symbols-sharp--purple">
-                    <i class="fa-solid fa-store"></i>
-                </span>
-                <span>Go enjoy it at the restaurant</span> 
+            <div class="howItWorks__options">
+                <div class="howItWorks__options__option">
+                    <span class="counter-circle">
+                        <span class="material-symbols-sharp"> counter_1</span>
+                    </span>
+                    <span class="material-symbols-sharp"> phone_iphone </span>
+                    <span>Choose a restaurant</span>
+                </div>
+                <div class="howItWorks__options__option">
+                    <span class="counter-circle">
+                        <span class="material-symbols-sharp"> counter_2</span>
+                    </span>
+                    
+                    <span class="material-symbols-sharp"> format_list_bulleted </span>
+                    <span>Create your menu</span>
+                </div>
+                <div class="howItWorks__options__option">
+                    <span class="counter-circle">
+                        <span class="material-symbols-sharp"> counter_3</span>
+                    </span>
+                    <span class="material-symbols-sharp--purple">
+                        <i class="fa-solid fa-store"></i>
+                    </span>
+                    <span>Go enjoy it at the restaurant</span> 
+                </div>
             </div>
         </section>
 
