--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     </head>
 
     <body>
+
+        <!--Source: https://www.youtube.com/watch?v=trsuokl2Fp4-->
         <div class="loading">
             <div class="loading__spinner"></div>
         </div>
